fix: update DockerHub repository path to mathtechstudio/ohmyg0sh

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,7 +27,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: iqbalfauzien/ohmyg0sh
+          images: mathtechstudio/ohmyg0sh
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
