--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,6 @@ name: Docker Build and Publish
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
 
@@ -27,12 +26,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: mathtechstudio/ohmyg0sh
+          images: iqbalfauzien/ohmyg0sh
           tags: |
             type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=edge,enable={{is_default_branch}}
       
       - name: Build and push
         uses: docker/build-push-action@v4
