--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: ohmyg0sh
-description: Lightweight Dart package for detecting possible API key or secret leaks using regex signatures.
+description: .apk security scanner that detects hardcoded API keys and credentials before they reach production.
 version: 1.69.777
-repository: https://github.com/username/ohmyg0sh
-issue_tracker: https://github.com/username/ohmyg0sh/issues
-homepage: https://github.com/username/ohmyg0sh
+repository: https://github.com/mathtechstudio/ohmyg0sh
+issue_tracker: https://github.com/mathtechstudio/ohmyg0sh/issues
+homepage: https://github.com/mathtechstudio/ohmyg0sh
 topics:
   - security
   - scanner
