--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: iqbalfauzien/ohmyg0sh
+          images: mathtechstudio/ohmyg0sh
           tags: |
             type=ref,event=branch
             type=raw,value=edge,enable={{is_default_branch}}
