--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dev_dependencies:
   lints: ^5.0.0
   test: ^1.24.0
 
+# Ignore synthetic secrets used in tests for publish validation
+false_secrets:
+  - test/**
+
 flutter:
   assets:
     - config/regexes.json
